# monitoring-client

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  run.sh  sonar-project.properties
.github/workflows/: arm-runner.yml  arm.yml  build.yml  cmake.yml  release.yml  static-analysis.yml
backups/platform/: thinger_backup.sh  thinger_restore.sh
cmake/modules/: FindJsonCpp.cmake
config/: app.json  thinger_monitor.json
install/: install_thinger_monitor.sh  thinger_monitor.service  thinger_monitor.template
src/: main.cpp
src/thinger/: client.h  config.h  monitor.h  thinger_monitor_client.h  thinger_monitor_config.h
src/thinger/system/: backup.h  restore.h
src/thinger/system/platform/: backup.h  restore.h  utils.h
src/thinger/utils/: aws.h  base64.h  crypto.h  date.h  docker.h  http_status.h  jwt.h  tar.h  thinger.h  utils.h  xml.h
src/thinger/utils/aws/: s3.h
test/thinger/: config.cpp  config.json
test/thinger/utils/: crypto.cpp  jwt.cpp
